Publish new buildbot config.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@174 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/master.cfg
+++ b/master.cfg
@@ -26,23 +26,34 @@ c['buildbotURL'] = "https://zope3.pov.lt/buildbot/"
 # configured into the buildslaves (with their --master option)
 c['slavePortnum'] = 9986
 
-# The 'bots' list defines the set of allowable buildslaves. Each element is a
-# tuple of bot-name and bot-password.
-c['bots'] = [("muskatas", "secret"),
-             ("sink", "secret")]
+# the 'slaves' list defines the set of allowable buildslaves. Each element is
+# a tuple of bot-name and bot-password. These correspond to values given to
+# the buildslave's mktap invocation.
+from buildbot.buildslave import BuildSlave
+c['slaves'] = [BuildSlave("muskatas", "secret"),
+               BuildSlave("sink", "secret")]
 
-# The 'sources' list tells the buildmaster how it should find out about
-# source code changes.
-c['sources'] = []
+# the 'change_source' setting tells the buildmaster how it should find out
+# about source code changes. Any class which implements IChangeSource can be
+# put here: there are several in buildbot/changes/*.py to choose from.
+c['change_source'] = []
 
 # The 'schedulers' list tells the buildmaster when to build what.
 from buildbot.scheduler import Nightly
 c['schedulers'] = [
-    Nightly(name="nightly",
+    Nightly(name="nightly1",
             hour=4, minute=0, # every night at 4 AM
             builderNames=[
                 "py2.4-32bit-linux",
                 "py2.4-64bit-linux",
+##              "py2.5-32bit-linux",
+##              "py2.5-64bit-linux",
+            ]),
+    Nightly(name="nightly2",
+            hour=6, minute=0, # every night at 6 AM
+            builderNames=[
+##              "py2.4-32bit-linux",
+##              "py2.4-64bit-linux",
                 "py2.5-32bit-linux",
                 "py2.5-64bit-linux",
             ]),
@@ -55,10 +66,11 @@ c['schedulers'] = [
 #  builddir (required): which subdirectory to run the builder in
 #  factory (required): a BuildFactory to define how the build is run
 #  periodicBuildTime (optional): if set, force a build every N seconds
-from buildbot.process import factory, step
+from buildbot.process import factory
+from buildbot.steps import source, shell
 from twisted.internet import reactor
 
-class SVN(step.SVN):
+class SVN(source.SVN):
 
     show_revno = False # the LastChange step does it better
 
@@ -82,7 +94,7 @@ class SVN(step.SVN):
             return None
 
 
-class LastChange(step.ShellCommand):
+class LastChange(shell.ShellCommand):
 
     command = ['svn', 'log', '--limit', '1']
     name = 'svn-last-change'
@@ -113,7 +125,7 @@ class LastChange(step.ShellCommand):
         return None
 
 
-class Test(step.Test):
+class Test(shell.Test):
 
     started = None
     stopped = None
@@ -121,14 +133,14 @@ class Test(step.Test):
     tick_every = 10 # seconds
 
     def start(self):
-        step.Test.start(self)
+        shell.Test.start(self)
         self.started = time.time()
         reactor.callLater(self.tick_every, self.tick)
 
     def finished(self, results):
         if not self.stopped:
             self.stopped = time.time()
-        step.Test.finished(self, results)
+        shell.Test.finished(self, results)
  
     def tick(self):
         if not self.stopped:
@@ -136,7 +148,7 @@ class Test(step.Test):
             reactor.callLater(self.tick_every, self.tick)
 
     def describe(self, done=False):
-        description = step.Test.describe(self, done=done)
+        description = shell.Test.describe(self, done=done)
         if not done and self.started:
             running = time.time() - self.started
             description = description + [self.formatTime(running)]
@@ -197,7 +209,7 @@ class Test(step.Test):
                             'Total:']:
             try:
                 summary_idx = min(summary_idx,
-                                  log_text.rindex('Tests with errors:'))
+                                  log_text.rindex(interesting))
             except ValueError:
                 pass
         return log_text[summary_idx:]
@@ -212,30 +224,31 @@ def builder(name, slavename):
               svnurl="svn://svn.zope.org/repos/main/zope.release/branches/3.4",
               mode="update")
     f.addStep(LastChange)
-    f.addStep(step.ShellCommand,
+    f.addStep(shell.ShellCommand,
               command=[python, "/usr/local/bin/virtualenv.py", "--no-site-packages", "sandbox"],
               name="virtualenv",
               description="virtualenv")
-    f.addStep(step.ShellCommand,
+    f.addStep(shell.ShellCommand,
               command=["sandbox/bin/python", "bootstrap.py"],
               name="bootstrap",
               description="bootstrap")
-    f.addStep(step.ShellCommand,
+    f.addStep(shell.ShellCommand,
               command=["bin/buildout"],
               name="buildout",
               description="buildout")
-    f.addStep(step.ShellCommand,
+    f.addStep(shell.ShellCommand,
               command=["bin/generate-buildout"],
               name="generate-buildout",
               description="generate-buildout")
-    f.addStep(step.ShellCommand,
+    f.addStep(shell.ShellCommand,
               workdir="build/test",
               command=["../bin/buildout"],
               name="buildout-test-env",
               description="cd test && buildout")
     f.addStep(Test,
               workdir="build/test",
-              command=["bin/test", "-v", "-1", "--exit-with-status"])
+              command=["bin/test", "-v", "-1", "--exit-with-status"],
+              env={'PYTHON_EGG_CACHE': 'egg-cache'})
     return dict(name=name,
                 slavename=slavename,
                 builddir=builddir,
@@ -251,14 +264,43 @@ c['builders'] = [
 # 'status' is a list of Status Targets. The results of each build will be
 # pushed to these targets. buildbot/status/*.py has a variety to choose from,
 # including web pages, email senders, and IRC bots.
-from buildbot.status.html import Waterfall
+from buildbot.status.html import WebStatus
 from buildbot.status.mail import MailNotifier
 c['status'] = [
-    Waterfall(http_port=8014, css="/var/lib/buildbot/buildbot.css"),
+    WebStatus(http_port=8014, allowForce=True),
 # No point in having it enabled while all the tests are failing
 ##  MailNotifier(mode="failing", fromaddr="buildbot@pov.lt",
 ##               extraRecipients=["marius@pov.lt"],
 ##               sendToInterestedUsers=False),
 ]
+
+####### OUTPUT TWEAKING
+
+from twisted.python import components
+from buildbot.status.web import waterfall
+from buildbot.status.web.base import IBox
+from buildbot.status import builder
+
+class StepBox(waterfall.StepBox):
+    def getBox(self, req):
+        box = waterfall.StepBox.getBox(self, req)
+        start, stop = self.original.getTimes()
+        if stop is None:
+            stop = time.time()
+        duration = stop - start
+        m, s = divmod(duration, 60)
+        h, m = divmod(m, 60)
+        if h:
+            duration ="%dh %02dm %02ds" % (h, m, s)
+        elif m:
+            duration ="%dm %02ds" % (m, s)
+        else:
+            duration ="%ds" % s
+        box.text.append('<span class="duration">%s</span>' % duration)
+        return box
+
+components.ALLOW_DUPLICATES = True # haaack!
+components.registerAdapter(StepBox, builder.BuildStepStatus, IBox)
+components.ALLOW_DUPLICATES = False
 
 # vim:set ft=python:
